<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/activity_tune_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TuneDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detail_album_image"
                style="@style/DetailAlbumImage"
                android:contentDescription="@string/details_album_image"/>

            <TextView
                android:id="@+id/detail_song_title"
                style="@style/DetailTextView"
                android:text="@string/song_title"/>

            <TextView
                android:id="@+id/detail_artist_name"
                style="@style/DetailTextView"
                android:layout_below="@+id/detail_song_title"
                android:text="@string/artist_name"/>

            <TextView
                android:id="@+id/detail_release_year"
                style="@style/DetailTextView"
                android:layout_below="@+id/detail_artist_name"
                android:text="@string/release_year"/>

            <TextView
                android:id="@+id/detail_genre"
                style="@style/DetailTextView"
                android:layout_below="@+id/detail_release_year"
                android:text="@string/genre"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/artist_bio"
            style="@style/DetailArtistBio"
            android:text="@string/artist_bio"/>

        <TextView
            style="@style/ExplainTextView"
            android:text="@string/details_explanation"/>

    </LinearLayout>
</ScrollView>
