<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/album_image_height"
        android:src="@drawable/image_icon"
        android:contentDescription="@string/album_image"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/song_title"
            android:text="@string/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/song_artist_text_size"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/artist_name"
            android:text="@string/artist_name"
            android:layout_below="@id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/song_artist_text_size"
            android:textColor="@color/colorText"/>

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="@dimen/play_button_width"
            android:layout_height="@dimen/play_button_height"
            android:src="@android:drawable/ic_media_play"
            android:contentDescription="@string/play_button"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/play_button_margin"
            android:layout_marginLeft="@dimen/play_button_margin"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/explanation_text_size"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/tap_tunes_explanation"
        android:background="@color/colorAccent"/>

</LinearLayout>
