<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_tune_genre"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TuneGenre">

    <LinearLayout
        android:id="@+id/genre_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/genre_linear_horizontal_margin"
        android:layout_marginRight="@dimen/genre_linear_horizontal_margin"
        android:orientation="vertical">

        <ImageView
            style="@style/GenreImageView"
            android:contentDescription="@string/genre_image_view"/>

        <TextView
            style="@style/GenreSongTextView"
            android:text="@string/song_title"/>

        <TextView
            style="@style/GenreArtistTextView"
            android:text="@string/artist_name"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/genre_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/genre_linear_horizontal_margin"
        android:layout_marginRight="@dimen/genre_linear_horizontal_margin"
        android:layout_toEndOf="@+id/genre_one"
        android:layout_toRightOf="@+id/genre_one"
        android:orientation="vertical">

        <ImageView
            style="@style/GenreImageView"
            android:contentDescription="@string/genre_image_view"/>

        <TextView
            style="@style/GenreSongTextView"
            android:text="@string/song_title"/>

        <TextView
            style="@style/GenreArtistTextView"
            android:text="@string/artist_name"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/genre_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/genre_two"
        android:layout_toRightOf="@+id/genre_two"
        android:orientation="vertical">

        <ImageView
            style="@style/GenreImageView"
            android:contentDescription="@string/genre_image_view"/>

        <TextView
            style="@style/GenreSongTextView"
            android:text="@string/song_title"/>

        <TextView
            style="@style/GenreArtistTextView"
            android:text="@string/artist_name"/>
    </LinearLayout>

    <TextView
        style="@style/ExplainTextView"
        android:layout_below="@+id/genre_one"
        android:text="@string/genre_explanation"/>
</RelativeLayout>
